--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,17 +1,23 @@
-@import url('./nprogress.scss');
+@import url("./_nprogress.scss");
 
 html {
 	height: 100%;
+}
+
+:root {
+	--primary: #014672;
+	--secondary: #f04d2f;
+	--highlight: #bf9e0b;
 }
 
 body {
 	width: 100%;
 	margin: 0;
 	padding: 0;
-	font-family: 'Sarabun';
+	font-family: "Sarabun";
 
 	button {
-		font-family: 'Sarabun';
+		font-family: "Sarabun";
 	}
 
 	.content-container {
