improved containers and navbar responsiveness

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -22,7 +22,8 @@ body {
 
 	.content-container {
 		background-color: #f2f2f2;
-		height: 73vh;
+		min-height: 73vh;
+    height: auto;
 		display: flex;
 		justify-content: center;
 		align-items: center;
