--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,5 @@
 @import url("./_nprogress.scss");
+@import url("./_transitions.scss");
 
 html {
 	height: 100%;
@@ -21,6 +22,7 @@ body {
 	}
 
 	.content-container {
+    position: relative;
 		background-color: #f2f2f2;
 		min-height: 73vh;
     height: auto;
